--- a/package.json
+++ b/package.json
@@ -52,8 +52,9 @@
   "bundledDependencies": [],
   "keywords": [
     "cdk",
-    "vpc"
+    "exec"
   ],
+  "main": "lib/index.js",
   "license": "Apache-2.0",
   "start": {
     "start": {
@@ -101,6 +102,7 @@
     }
   },
   "version": "0.0.3",
+  "types": "lib/index.d.ts",
   "jest": {
     "clearMocks": true,
     "collectCoverage": true,
